# pw-duck

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD.in  README.md  flake.nix
.github/workflows/: aur-release.yml
src/: analysis.rs  capture.rs  ducking.rs  logging.rs  main.rs  ui.rs
