[package]
name = "pw-duck"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gerhard Schwanzer <geri@sdf.org>"]

[profile.dev]
incremental = true

[dependencies]
anyhow = "1"
pipewire = "0.9"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"
regex = "1"
crossterm = "0.27"
ratatui = "0.26"

[features]
dev-tools = []

